--- a/data/meson.build
+++ b/data/meson.build
@@ -33,6 +33,8 @@ appstream_file = i18n.merge_file(
   install_dir: join_paths(datadir, 'appdata')
 )
 
+install_data(application_id + '.releases.xml', install_dir: join_paths(datadir, 'metainfo', 'releases'), install_mode: 'rwxrwxrwx')
+
 appstream_util = find_program('appstream-util', required: false)
 if appstream_util.found()
   test('Validate appstream file', appstream_util, args: ['validate', appstream_file])
@@ -78,6 +80,7 @@ install_data(
 )
 
 install_data('config.json', install_dir: moduledir, install_mode: 'rwxrwxrwx')
+install_data('whats_new', install_dir: moduledir, install_mode: 'rwxrwxrwx')
 
 styles_dir = 'styles'
 styles = [
