ignore docstrings for now
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [flake8]
 count = True
 #default_ignorelist: E121,E123,E126,E226,E24,E704,W503,W504
-ignore = E501, Q000
+ignore = E501, Q000, D
 inline-quotes = double
