final linting touches
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,17 @@
 [flake8]
 count = True
 #default_ignorelist: E121,E123,E126,E226,E24,E704,W503,W504
-ignore = E501, Q000, D
+ignore =
+	# temporarily disable double quotes
+	Q000
+	# temporarily disable line too long
+	E501
+	# temporarily disable docstring related stuff
+	D100, D101, D102, D103, D107, D204, D205, D400, D401
 inline-quotes = double
+
+per-file-ignores =
+	main.py: F401
+	# As long as numpy should be available in its current state
+	add_equation.py: F403, F401
+	transform_data.py: F403, F401
