--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
         cache-key: flatpak-builder-${{ github.sha }}
 
   flake8-lint:
-    runs-on: ubuntu-latest
     name: flake8
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
       - name: Set up Python environment
@@ -32,3 +32,4 @@ jobs:
         uses: reviewdog/action-flake8@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          fail_on_error: true
