final porting efforts
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -61,6 +61,9 @@ blueprints = custom_target('blueprints',
     'ui/window.blp',
     'ui/add_data_advanced.blp',
     'ui/add_equation_window.blp',
+    'ui/help_overlay.blp',
+    'ui/plot_settings.blp',
+    'ui/preferences.blp',
     'ui/rename_label_window.blp',
     'ui/sample_box.blp',
     'ui/transform_window.blp'
