move dialogs to blueprint
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -59,6 +59,7 @@ endif
 blueprints = custom_target('blueprints',
   input: files(
     'ui/window.blp',
+    'ui/dialogs.blp',
     'ui/add_data_advanced.blp',
     'ui/add_equation_window.blp',
     'ui/help_overlay.blp',
