--- a/tox.ini
+++ b/tox.ini
@@ -8,5 +8,4 @@ inline-quotes = double
 
 per-file-ignores =
 	# As long as numpy should be available in its current state
-	add_equation.py: F403, F401
-	transform_data.py: F403, F401, U100
+	operation.py: F403, F401
