supress unuesed argument in operations.py
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,4 @@ inline-quotes = double
 per-file-ignores =
 	# As long as numpy should be available in its current state
 	calculation.py: F403, F401
+	operation.py: U100
