--- a/tox.ini
+++ b/tox.ini
@@ -8,5 +8,6 @@ inline-quotes = double
 
 per-file-ignores =
 	# As long as numpy should be available in its current state
-	calculation.py: F403, F401
+	calculation.py: F403, F401, U100
 	operation.py: U100
+	canvas.py: U100
