separate item setting from plot settings
Signed-off-by: Christoph Kohnen <christoph.kohnen@gymbane.eu>

--- a/src/meson.build
+++ b/src/meson.build
@@ -17,6 +17,7 @@ graphs_sources = [
   'canvas.py',
   'colorpicker.py',
   'data.py',
+  'edit_item.py',
   'file_io.py',
   'graphs.py',
   'main.py',
