--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,4 @@ inline-quotes = double
 
 per-file-ignores =
 	# As long as numpy should be available in its current state
-	calculation.py: F403, F401, U100
-	operations.py: U100
-	canvas.py: U100
+	calculation.py: F403, F401, F841
