--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,5 @@ inline-quotes = double
 per-file-ignores =
 	# As long as numpy should be available in its current state
 	calculation.py: F403, F401, F841
+	# For overriding internal functions only
+	canvas.py: U100
