use proper snake_case
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/config.json
+++ b/data/config.json
@@ -18,8 +18,8 @@
 "savefig_transparent": true, 
 "plot_legend": true,
 "plot_invert_color_cycle_dark": false, 
-"plot_Y_label": "Y Value", 
-"plot_X_label": "X Value",
+"plot_y_label": "Y Value",
+"plot_x_label": "X Value",
 "plot_right_label": "Y Value 2", 
 "plot_top_label": "X Value 2", 
 "plot_font_size": "12", 
@@ -29,12 +29,12 @@
 "plot_title": "", 
 "savefig_filetype": "svg", 
 "plot_color_cycle": "tab10", 
-"plot_X_scale": "linear", 
-"plot_Y_scale": "linear",
+"plot_x_scale": "linear",
+"plot_y_scale": "linear",
 "plot_top_scale": "linear", 
 "plot_right_scale": "linear",
-"plot_X_position": "bottom",
-"plot_Y_position": "left",
+"plot_x_position": "bottom",
+"plot_y_position": "left",
 "action_center_data": "Center at middle coordinate", 
 "plot_selected_linestyle": "solid",
 "plot_unselected_linestyle": "solid", 
@@ -48,7 +48,7 @@
 "plot_unselected_markers": "none",
 "plot_selected_markers": "none",
 "addequation_equation": "X",
-"addequation_X_start": "0",
-"addequation_X_stop": "10",
+"addequation_x_start": "0",
+"addequation_x_stop": "10",
 "addequation_step_size": "0.01"
 }
