migrate to FileDialog
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -59,8 +59,8 @@ endif
 blueprints = custom_target('blueprints',
   input: files(
     'ui/window.blp',
-    'ui/dialogs.blp',
     'ui/edit_item.blp',
+    'ui/export_figure.blp',
     'ui/add_data_advanced.blp',
     'ui/add_equation_window.blp',
     'ui/help_overlay.blp',
