reimplement transparent background
Whether to export with a transparent background is no longer saved in
the canvas, but directly queried from preferences and passed along to
the actual matplotlib function.

Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/config.json
+++ b/data/config.json
@@ -15,7 +15,7 @@
 "guess_headers": true,
 "plot_tick_direction": "in",
 "handle_duplicates": "Auto-rename duplicates",
-"savefig_transparent": true, 
+"export_figure_transparent": true,
 "plot_legend": true,
 "plot_invert_color_cycle_dark": false, 
 "plot_y_label": "Y Value",
