--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [flake8]
 count = True
 #default_ignorelist: E121,E123,E126,E226,E24,E704,W503,W504
-ignore = U101
+ignore = U101, E251
 	# temporarily disable docstring related stuff
 	D100, D101, D102, D103, D107, D204, D205, D400, D401
 inline-quotes = double
