--- a/src/meson.build
+++ b/src/meson.build
@@ -15,11 +15,11 @@ graphs_sources = [
   'calculation.py',
   'clipboard.py',
   'canvas.py',
-  'data.py',
   'edit_item.py',
   'export_figure.py',
   'file_io.py',
   'graphs.py',
+  'item.py',
   'main.py',
   'misc.py',
   'operations.py',
