--- a/src/meson.build
+++ b/src/meson.build
@@ -20,6 +20,7 @@ graphs_sources = [
   'file_io.py',
   'graphs.py',
   'item.py',
+  'item_box.py',
   'main.py',
   'misc.py',
   'operations.py',
@@ -27,7 +28,6 @@ graphs_sources = [
   'plotting_tools.py',
   'preferences.py',
   'rename.py',
-  'sample_box.py',
   'transform_data.py',
   'ui.py',
   'utilities.py',
