Initial work for plot styles
the actual plot style is now read from the users config. The plot will
only use plots, that are saved there and not system provided matplotlib
ones.

Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -104,11 +104,25 @@ install_data(
 install_data('config.json', install_dir: moduledir, install_mode: 'rwxrwxrwx')
 install_data('whats_new', install_dir: moduledir, install_mode: 'rwxrwxrwx')
 
-styles_dir = 'styles'
-styles = [
-join_paths(styles_dir, 'adwaita.mplstyle'),
-join_paths(styles_dir, 'adwaita-dark.mplstyle'),
-]
-# this isn't pretty, but since the install target is only flatpak, this doesn't affect other applications
-matplotlib_styles_dir = '/app/lib/python3.10/site-packages/matplotlib/mpl-data/stylelib'
-install_data(styles, install_dir: matplotlib_styles_dir, install_mode: 'rwxrwxrwx')
+styles = files(
+  'styles/adwaita.mplstyle',
+  'styles/adwaita-dark.mplstyle',
+  'styles/bmh.mplstyle',
+  'styles/classic.mplstyle',
+  'styles/dark-background.mplstyle',
+  'styles/fast.mplstyle',
+  'styles/fivethirtyeight.mplstyle',
+  'styles/ggplot.mplstyle',
+  'styles/grayscale.mplstyle',
+  'styles/seaborn.mplstyle',
+  'styles/seaborn-bright.mplstyle',
+  'styles/seaborn-colorblind.mplstyle',
+  'styles/seaborn-dark.mplstyle',
+  'styles/seaborn-darkgrid.mplstyle',
+  'styles/seaborn-dark-palette.mplstyle',
+  'styles/seaborn-deep.mplstyle',
+  'styles/seaborn-muted.mplstyle',
+  'styles/seaborn-notebook.mplstyle',
+)
+styles_dir = join_paths(moduledir, 'styles')
+install_data(styles, install_dir: styles_dir, install_mode: 'rwxrwxrwx')
