--- a/data/meson.build
+++ b/data/meson.build
@@ -66,8 +66,10 @@ blueprints = custom_target('blueprints',
     'ui/help_overlay.blp',
     'ui/item_box.blp',
     'ui/plot_settings.blp',
+    'ui/plot_styles.blp',
     'ui/preferences.blp',
     'ui/rename_window.blp',
+    'ui/style_box.blp',
     'ui/transform_window.blp'
   ),
   output: '.',
