rework line properties
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/config.json
+++ b/data/config.json
@@ -28,5 +28,6 @@
 "addequation_equation": "X",
 "addequation_x_start": "0",
 "addequation_x_stop": "10",
-"addequation_step_size": "0.01"
+"addequation_step_size": "0.01",
+"hide_unselected": false
 }
