--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           python-version: "3.10"
       # Install flake8 extensions (this step is not required. Default is "None").
       - name: Set up flake8
-        run: pip install flake8-docstrings flake8-simplify flake8-unused-arguments flake8-quotes
+        run: pip install flake8-docstrings flake8-simplify flake8-unused-arguments flake8-quotes flake8-bugbear flake8-pie flake8-print flake8-warnings flake8-commas flake8-builtins flake8-import-order pep8-naming
       - name: flake8 Lint
         uses: reviewdog/action-flake8@v3
         with:
