--- a/meson.build
+++ b/meson.build
@@ -9,7 +9,7 @@ application_id = 'se.sjoerd.Graphs'
 name = 'Graphs'
 copyright = '2022 - 2023'
 homepage_url = 'https://www.sjoerd.se/Graphs'
-github_url = 'https://github.com/Sjoerd1993/Graphs'
+github_url = 'https://github.com/sjoerd1993/Graphs'
 issue_url = github_url + '/issues'
 author = 'Sjoerd Stendahl'
 description_short = 'Plot and manipulate data in a breeze'
