rework plot style preferences
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/config.json
+++ b/data/config.json
@@ -17,8 +17,8 @@
 "plot_x_position": "bottom",
 "plot_y_position": "left",
 "action_center_data": "Center at middle coordinate", 
-"plot_style_dark": "adwaita-dark",
-"plot_style_light": "adwaita",
+"use_custom_plot_style": false,
+"custom_plot_style": "adwaita",
 "import_column_x": 0,
 "import_column_y": 1, 
 "import_skip_rows": 0, 
