Misc. Changes and cleanups
- clean list creation
- update config keys and sort alphabetically
- plot_styles: update name
- preferences: update names & sort according to ui layout
- window: remove uneeded widget names
- window: bind no data status page's visibility to the item list
- window: renamelist_box to item_list
- toolbar: use builtin functions (codewise identical & cleaner)
- canvas/toolbar: just pass if trying to call save (this should never be
the case)
- fix view actions
- add plot styles keybind
- plot styles do not check against pyplot (it broke things)

Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/config.json
+++ b/data/config.json
@@ -1,32 +1,31 @@
 {
-"guess_headers": true,
-"handle_duplicates": "Auto-rename duplicates",
-"export_figure_transparent": true,
-"plot_legend": true,
-"plot_invert_color_cycle_dark": false, 
-"plot_y_label": "Y Value",
-"plot_x_label": "X Value",
-"plot_right_label": "Y Value 2", 
-"plot_top_label": "X Value 2", 
-"plot_title": "", 
-"savefig_filetype": "svg", 
-"plot_x_scale": "linear",
-"plot_y_scale": "linear",
-"plot_top_scale": "linear", 
-"plot_right_scale": "linear",
-"plot_x_position": "bottom",
-"plot_y_position": "left",
-"action_center_data": "Center at middle coordinate", 
-"use_custom_plot_style": false,
-"custom_plot_style": "adwaita",
-"import_column_x": 0,
-"import_column_y": 1, 
-"import_skip_rows": 0, 
-"import_separator": ".",
-"import_delimiter": "\\s+", 
+"action_center_data": "Center at middle coordinate",
 "addequation_equation": "X",
+"addequation_step_size": "0.01",
 "addequation_x_start": "0",
 "addequation_x_stop": "10",
-"addequation_step_size": "0.01",
-"hide_unselected": false
+"export_figure_filetype": "svg",
+"export_figure_transparent": true,
+"guess_headers": true,
+"handle_duplicates": "Auto-rename duplicates",
+"hide_unselected": false,
+"import_column_x": 0,
+"import_column_y": 1,
+"import_delimiter": "\\s+",
+"import_separator": ".",
+"import_skip_rows": 0,
+"plot_custom_style": "adwaita",
+"plot_legend": true,
+"plot_right_label": "Y Value 2",
+"plot_right_scale": "linear",
+"plot_title": "",
+"plot_top_label": "X Value 2",
+"plot_top_scale": "linear",
+"plot_use_custom_style": false,
+"plot_x_label": "X Value",
+"plot_y_position": "left",
+"plot_x_scale": "linear",
+"plot_y_label": "Y Value",
+"plot_x_position": "bottom",
+"plot_y_scale": "linear"
 }
