--- a/src/meson.build
+++ b/src/meson.build
@@ -35,4 +35,5 @@ graphs_sources = [
   'window.py',
 ]
 
+moduledir = join_paths(pkgdatadir, meson.project_name())
 install_data(graphs_sources, install_dir: moduledir, install_mode: 'rwxrwxrwx')
