Add new "thesis" style
Add the style that I use for my own thesis. Basically it's without grids,  slightly longer ticks on the inside on all borders and a more "standard" like color cycle. I also use the same style as the basis for academic articles.

Felt to me that a style like this was missing somewhat, and for me personally it's convenient to ship these as well.

--- a/data/meson.build
+++ b/data/meson.build
@@ -132,6 +132,7 @@ styles = files(
   'styles/seaborn-whitegrid.mplstyle',
   'styles/solarized-light.mplstyle',
   'styles/tableau-colorblind10.mplstyle',
+  'styles/thesis.mplstyle',
 )
 styles_dir = join_paths(pkgdatadir, 'styles')
 install_data(styles, install_dir: styles_dir, install_mode: 'rwxrwxrwx')
