--- a/data/se.sjoerd.Graphs.appdata.xml.in.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in.in
@@ -27,19 +27,23 @@
   <screenshots>
     <screenshot type="default">
       <caption>1 - Plot and manipulate any data set inserted by equation or from file</caption>
-      <image>http://www.sjoerd.se/graphs_equations.png</image>
+      <image>https://raw.githubusercontent.com/Sjoerd1993/Graphs/main/data/screenshots/sin_cos.png</image>
     </screenshot>
     <screenshot type="default">
-      <caption>2 - Add Data from an Equation</caption>
-      <image>http://www.sjoerd.se/graphs_add_equation.png</image>
+      <caption>2 - Both light and dark mode is supported</caption>
+      <image>https://raw.githubusercontent.com/Sjoerd1993/Graphs/main/data/screenshots/sines_dark.png</image>
     </screenshot>
     <screenshot type="default">
-      <caption>3 - Both light and dark mode is supported</caption>
-      <image>http://www.sjoerd.se/graphs_light_dark.png</image>
+      <caption>3 - Add data from an equation</caption>
+      <image>https://raw.githubusercontent.com/Sjoerd1993/Graphs/main/data/screenshots/add_equation.png</image>
     </screenshot>
     <screenshot type="default">
-      <caption>4 - Add data from a wide arrange of formatting</caption>
-      <image>http://www.sjoerd.se/graphs_open_data.png</image>
+      <caption>4 - Edit plot stylesheets</caption>
+      <image>https://raw.githubusercontent.com/Sjoerd1993/Graphs/main/data/screenshots/style_editor.png</image>
+    </screenshot>
+    <screenshot>
+      <caption>5 - Maniuplate data using a wide range of operations</caption>
+      <image>https://raw.githubusercontent.com/Sjoerd1993/Graphs/main/data/screenshots/manipulate_data.png</image>
     </screenshot>
   </screenshots>
   <releases>
