--- a/data/se.sjoerd.Graphs.appdata.xml.in.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in.in
@@ -47,7 +47,7 @@
     </screenshot>
   </screenshots>
   <releases>
-    <release version="1.5.0" date="TBA">
+    <release version="1.5.0" date="2023-04-16">
       <description>
         <p>Major Highlights</p>
         <ul>
