--- a/po/meson.build
+++ b/po/meson.build
@@ -1,9 +1,2 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
-languages = fs.read('LINGUAS').strip().split('\n')
-i18n.gettext(
-	'graphs',
-	install_dir: localedir,
-	preset: 'glib',
-	args: '--from-code=UTF-8',
-	languages: languages
-)
+i18n.gettext(project_name, preset: 'glib')
