--- a/data/se.sjoerd.Graphs.appdata.xml.in.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in.in
@@ -51,6 +51,8 @@
       <description>
         <p>Changes:</p>
         <ul>
+	  <li>Add support for .xry file types from Leybold X-Ray apparatus.</li>
+          <li>Add support for single-column files</li>
           <li>Changed the behaviour of the canvas so that the limits are not reset unnecessarily</li>
           <li>Started initial work on localization support</li>
           <li>Refactors under-the-hood</li>
