Rewrite advanced import.
Advanced import is now invoked after the files have been picked. A
window with options will only appear if any are applicable.
If the user cancels the window default values will be used.

Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -58,11 +58,11 @@ endif
 
 blueprints = custom_target('blueprints',
   input: files(
-    'ui/add_data_advanced.blp',
     'ui/add_equation_window.blp',
     'ui/add_style.blp',
     'ui/edit_item.blp',
     'ui/export_figure.blp',
+    'ui/import.blp',
     'ui/help_overlay.blp',
     'ui/item_box.blp',
     'ui/plot_settings.blp',
