Build dialogs dynamically.
Dialogs, especially Adw.MessageDialogs are now stored in dialogs.blp
and can be build using a new function in ui.

This requires a version bump in the blueprint-compiler, requiring slight
syntax adjustments

Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -60,6 +60,7 @@ blueprints = custom_target('blueprints',
   input: files(
     'ui/add_equation_window.blp',
     'ui/add_style.blp',
+    'ui/dialogs.blp',
     'ui/edit_item.blp',
     'ui/export_figure.blp',
     'ui/import.blp',
