--- a/data/se.sjoerd.Graphs.appdata.xml.in.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in.in
@@ -50,6 +50,7 @@
     <release version="1.6.1" data="2023-06-15">
         <p>Minor patch with some bug fixes:</p>
         <ul>
+	  <li>Filters have been added for the "New Data" dialog.</li>
 	  <li>Fixed a bug all styles in the style manager had a checkmark if the system preffered style was used.</li>
 	  <li>Fixed a bug where the legend would not be removed from the graph when toggled off, until it was completely reloaded.</li>
 	  <li>Automatic axes limits are no longer rounded, which used to lead to problems with the scaling when using data span with a large amount of significant digits.</li>
