--- a/data/config.json
+++ b/data/config.json
@@ -4,8 +4,8 @@
   "addequation_step_size": "0.01",
   "addequation_x_start": "0",
   "addequation_x_stop": "10",
-  "clipboard_length": "25",
-  "export_figure_dpi": "100",
+  "clipboard_length": 25,
+  "export_figure_dpi": 100,
   "export_figure_filetype": "svg",
   "export_figure_transparent": true,
   "handle_duplicates": "Auto-rename duplicates",
