--- a/data/se.sjoerd.Graphs.appdata.xml.in.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in.in
@@ -47,7 +47,7 @@
     </screenshot>
   </screenshots>
   <releases>
-    <release version="1.6.1" data="2023-06-14">
+    <release version="1.6.1" date="2023-06-14">
         <p>Minor patch with some bug fixes:</p>
         <ul>
 	  <li>Fixed a bug where "Export Figure" and "Preferences" could not be loaded</li>
