--- a/data/config.json
+++ b/data/config.json
@@ -8,8 +8,8 @@
   "export_figure_dpi": 100,
   "export_figure_filetype": "svg",
   "export_figure_transparent": true,
-  "handle_duplicates": "Auto-rename duplicates",
-  "hide_unselected": false,
+  "other_handle_duplicates": "Auto-rename duplicates",
+  "other_hide_unselected": false,
   "override_style_change": true,
   "plot_custom_style": "adwaita",
   "plot_legend": true,
