refactor about window
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/src/graphs.in
+++ b/src/graphs.in
@@ -62,7 +62,7 @@ if __name__ == "__main__":
     format = "%(levelname)s: %(message)s"
     logging.basicConfig(format=format, level=logging.@LOG_LEVEL@)
 
-    args = [VERSION, APPLICATION_ID, NAME, COPYRIGHT, HOMEPAGE_URL, ISSUE_URL, AUTHOR, PKGDATADIR]
+    args = [VERSION, APPLICATION_ID, NAME, HOMEPAGE_URL, ISSUE_URL, AUTHOR, PKGDATADIR]
 
     from graphs import main
     sys.exit(main.main(args))
