--- a/data/config.json
+++ b/data/config.json
@@ -4,16 +4,13 @@
   "addequation_step_size": "0.01",
   "addequation_x_start": "0",
   "addequation_x_stop": "10",
-  "clipboard_length": 75,
   "export_figure_dpi": 100,
-  "export_figure_filetype": "png",
   "export_figure_transparent": true,
-  "other_handle_duplicates": "Auto-rename duplicates",
-  "other_hide_unselected": false,
+  "handle_duplicates": "Auto-rename duplicates",
+  "hide_unselected": false,
   "override_style_change": true,
   "plot_custom_style": "adwaita",
   "plot_legend": true,
-  "plot_legend_position": "Best",
   "plot_right_label": "Y Value 2",
   "plot_right_scale": "linear",
   "plot_title": "",
