--- a/src/graphs.in
+++ b/src/graphs.in
@@ -56,6 +56,12 @@ if __name__ == "__main__":
     gi.require_version("Gtk", "4.0")
 
     from gi.repository import Gio
+    path = os.path.join(PKGDATADIR, "@APPLICATION_ID@.gresource")
+    print(path)
+    print(path)
+    print(path)
+    print(path)
+    print(path)
     resource = Gio.Resource.load(os.path.join(PKGDATADIR, "@APPLICATION_ID@.gresource"))
     resource._register()
 
