--- a/tox.ini
+++ b/tox.ini
@@ -11,3 +11,4 @@ per-file-ignores =
 	calculation.py: F403, F401, F841
 	# For overriding internal functions only
 	canvas.py: U100
+	test_operations.py: E402
