--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y dbus libgirepository1.0 libgirepository1.0-dev gobject-introspection libglib2.0-dev desktop-file-utils meson gettext python3-matplotlib python3-scipy
+        sudo apt-get install -y dbus libgirepository1.0 libgirepository1.0-dev gobject-introspection libglib2.0-dev desktop-file-utils meson gettext python3-matplotlib python3-scipy gobject-introspection
         pip3 install pytest PyGObject pgi
         git clone https://gitlab.gnome.org/jwestman/blueprint-compiler.git            
         meson build_blueprint blueprint-compiler
