--- a/src/meson.build
+++ b/src/meson.build
@@ -16,6 +16,7 @@ graphs_sources = [
   'canvas.py',
   'edit_item.py',
   'export_figure.py',
+  'figure_settings.py',
   'file_import.py',
   'file_io.py',
   'graphs.py',
@@ -25,7 +26,6 @@ graphs_sources = [
   'migrate.py',
   'misc.py',
   'operations.py',
-  'plot_settings.py',
   'plot_styles.py',
   'plotting_tools.py',
   'preferences.py',
