--- a/data/meson.build
+++ b/data/meson.build
@@ -57,10 +57,10 @@ blueprints = custom_target('blueprints',
     'ui/dialogs.blp',
     'ui/edit_item.blp',
     'ui/export_figure.blp',
+    'ui/figure_settings.blp',
     'ui/import.blp',
     'ui/help_overlay.blp',
     'ui/item_box.blp',
-    'ui/plot_settings.blp',
     'ui/plot_styles.blp',
     'ui/preferences.blp',
     'ui/rename_window.blp',
