--- a/src/meson.build
+++ b/src/meson.build
@@ -12,14 +12,14 @@ graphs_sources = [
   'actions.py',
   'add_equation.py',
   'calculation.py',
-  'clipboard.py',
   'canvas.py',
+  'clipboard.py',
+  'data.py',
   'edit_item.py',
   'export_figure.py',
   'figure_settings.py',
   'file_import.py',
   'file_io.py',
-  'graphs.py',
   'item.py',
   'item_box.py',
   'main.py',
